<resources>
    <string name="app_name">Movie browser</string>
    <string name="favorites">Favorites</string>
    <string name="logout">Log out</string>
    <string name="loading">Loading…</string>

    <!-- Login -->
    <string name="title_login">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="help_register">Does not have an account yet?</string>
    <string name="button_register">Register</string>
    <string name="error_user_does_not_exist">User does not exist!</string>
    <string name="error_password_is_wrong">Username or password is wrong!</string>
    <string name="error_unknown">Unknown error.</string>

    <!-- Register -->
    <string name="title_register">Register</string>
    <string name="error_username_empty">Please specify username.</string>
    <string name="error_user_exists">User already exists.</string>
    <string name="error_password_empty">Please specify password.</string>
    <string name="error_password_short">Password is too short.</string>
    <string name="error_passwords_differ">Passwords must match.</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_logout">Log out</string>
    <string name="title_favorites">Favorites</string>

    <!-- Movie list -->
    <string name="error_empty_list">No results found.</string>
    <string name="error_io">Error communicating with server.</string>
    <string name="desc_favorite_icon">Favorite button</string>
    <string name="hint_search">Search…</string>
    <string name="hint_use_search">Type movie title to search.</string>
    <string name="desc_favorite">Favorite button</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_favorites">No favorites yet.</string>
</resources>
