<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="@dimen/elevation"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:minHeight="?attr/actionBarSize"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:textSize="40sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTitle" android:text="@string/app_name"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/etUsername"
                app:layout_constraintVertical_chainStyle="packed" app:layout_constraintTop_toTopOf="parent"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etUsername"
                android:hint="@string/hint_username" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toTopOf="@+id/etPassword"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/etPassword"
                android:hint="@string/hint_password" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/etUsername" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toTopOf="@+id/btnLogin"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnLogin" android:text="@string/button_login"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etPassword"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toTopOf="@+id/tvRegisterTitle"/>
        <TextView
                android:text="@string/help_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvRegisterTitle" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/btnRegister"/>
        <Button
                android:text="@string/button_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnRegister" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvRegisterTitle"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"/>
        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:id="@+id/pbLoading" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/tvRegisterTitle"
                app:layout_constraintStart_toEndOf="@+id/btnLogin" android:layout_marginStart="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>