<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="@dimen/elevation"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etUsername"
            android:hint="@string/hint_username" app:layout_constraintTop_toBottomOf="@+id/toolBar"
            app:layout_constraintBottom_toTopOf="@+id/etPassword"
            app:layout_constraintVertical_chainStyle="packed" android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etPassword"
            android:hint="@string/hint_password" app:layout_constraintTop_toBottomOf="@+id/etUsername"
            app:layout_constraintBottom_toTopOf="@+id/etPasswordAgain" android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etPasswordAgain" android:hint="@string/hint_confirm_password"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            app:layout_constraintBottom_toTopOf="@+id/btnRegister" android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegister" android:text="@string/button_register"
            app:layout_constraintTop_toBottomOf="@+id/etPasswordAgain" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/pbLoading"
            app:layout_constraintStart_toEndOf="@+id/btnRegister" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/btnRegister"
            app:layout_constraintTop_toTopOf="@+id/btnRegister"/>

</androidx.constraintlayout.widget.ConstraintLayout>